fixed centered esc button on mobile version

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -49,11 +49,12 @@ body > div:nth-child(4) > div > div > div > button > svg > path {
   .styles_closeButton__20ID4 {
     position: absolute;
     top: 429px;
-    right: 159px;
     border: none;
     padding: 0;
     background-color: transparent;
     display: flex;
+    left: 50%;
+    margin-left: -25px;
   }
 
   body > div:nth-child(4) > div > div > div > button > svg {
